# milions-sys

./: .gitignore  Cargo.toml  docker-compose.yaml
assets/database/: 02-contacts-schema.sql  03-users-schema.sql  05-clients-schema.sql
config/: Cargo.toml
config/src/: lib.rs
files/app_config/: base.yaml
files/database/: 01-locations-schema.sql  04-collabotors-schema.sql  06-jobs-schema.sql
services/: Cargo.toml
services/src/: lib.rs  mutation.rs  query.rs
services/src/contacts/: contact_mutation.rs  contact_query.rs  mod.rs
services/src/contacts/models/: address.rs  contact.rs  mod.rs  phone.rs
services/src/locations/: location_mutation.rs  location_query.rs  mod.rs
services/src/locations/models/: location.rs
services/src/users/: mod.rs  user_mutation.rs  user_query.rs
services/src/users/models/: user.rs
