[package]
name = "milions-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }

[workspace]
members = ["services"]

[workspace.dependencies]
keycloak = "26.4.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "uuid",
] }
tokio = { version = "1.48.0", features = ["full"] }


[lints.rust]
dead_code = "allow"
