[package]
name = "milions-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }

[workspace]
members = ["config", "services"]

[workspace.dependencies]
testcontainers = "0.26.2"
argon2 = "0.5.3"
snafu = { version = "0.8.9", features = ["futures", "default", "std"] }
thiserror = "2.0.17"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde", "v7"] }
secrecy = { version = "0.10.0", features = ["serde"] }
serde-aux = "4.7.0"
serde = { version = "1.0.183", features = ["derive"] }
keycloak = "26.4.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
tokio = { version = "1.48.0", features = ["full"] }


[lints.rust]
dead_code = "allow"
